force-app/main/default/objects/Studenten__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANKARA</fullName>
            </value>
            <value>
                <fullName>İSTANBUL</fullName>
            </value>
            <value>
                <fullName>İZMİR</fullName>
            </value>
            <value>
                <fullName>BURSA</fullName>
            </value>
            <value>
                <fullName>ÇANAKKALE</fullName>
            </value>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
            <value>
                <fullName>Fontana</fullName>
            </value>
            <value>
                <fullName>Santa Rosa</fullName>
            </value>
            <value>
                <fullName>Seattle</fullName>
            </value>
            <value>
                <fullName>Spokane</fullName>
            </value>
            <value>
                <fullName>Bellevue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>