force-app/main/default/objects/Studenten__c/fields/Formulaa__c.field-meta.xml
<CustomField>
    <fullName>Formulaa__c</fullName>
    <formula>TIMENOW()





/* IF( 
        DATEVALUE(08:00&lt;TIMENOW()&lt;18:00)  ,
          &quot;I Hate Salesforce&quot;,
           &quot;I Love Salesforce&quot;
)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formulaa</label>
    <type>Time</type>
</CustomField>