force-app/main/default/objects/Studenten__c/fields/New_Field2__c.field-meta.xml
<CustomField>
    <fullName>New_Field2__c</fullName>
    <formula>TEXT(Gender__c )    &amp;  &apos; &apos;  &amp;   FirstName__c   &amp; &apos; &apos;  &amp;    LastName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Field2</label>
    <type>Text</type>
</CustomField>