force-app/main/default/objects/Studenten__c/fields/New_Field__c.field-meta.xml
<CustomField>
    <fullName>New_Field__c</fullName>
    <formula>&apos;salih&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Field</label>
    <type>Text</type>
</CustomField>