force-app/main/default/objects/Studenten__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TURKEY</fullName>
            </value>
            <value>
                <fullName>CALIFORNIA</fullName>
            </value>
            <value>
                <fullName>WASHINGTON</fullName>
            </value>
            <value>
                <fullName>NOORDHOLLAND</fullName>
            </value>
            <value>
                <fullName>LIMBURG</fullName>
            </value>
            <value>
                <fullName>FRIESLAND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>