force-app/main/default/objects/Studenten__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kayit Asamasinda</fullName>
            </value>
            <value>
                <fullName>Devam Ediyor</fullName>
            </value>
            <value>
                <fullName>Kayit Donduruldu</fullName>
            </value>
            <value>
                <fullName>Mezun</fullName>
            </value>
            <value>
                <fullName>Kayit Iptal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>