force-app/main/default/objects/Studenten__c/fields/Teachers__c.field-meta.xml
<CustomField>
    <fullName>Teachers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Teacher</label>
    <referenceTo>Teacher__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>