force-app/main/default/objects/Studenten__c/recordTypes/Personal_Student_Rt.recordType-meta.xml
<RecordType>
    <fullName>Personal_Student_Rt</fullName>
    <active>true</active>
    <label>Personal Student Rt</label>
</RecordType>