force-app/main/default/objects/Studenten__c/validationRules/EnrollmentDate.validationRule-meta.xml
<ValidationRule>
    <fullName>EnrollmentDate</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Enrollment_Date__c ) || Enrollment_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Enrollment_Date__c</errorDisplayField>
    <errorMessage>Enrollment Date te dikkat ediniz</errorMessage>
</ValidationRule>