force-app/main/default/objects/Studenten__c/validationRules/GraduationDate.validationRule-meta.xml
<ValidationRule>
    <fullName>GraduationDate</fullName>
    <active>true</active>
    <errorConditionFormula>Graduation_Date__c &gt;  TODAY() || 
 Graduation_Date__c &lt; Enrollment_Date__c</errorConditionFormula>
    <errorDisplayField>Graduation_Date__c</errorDisplayField>
    <errorMessage>Graduation Date gelecek tarih ve ya Enrollment Date ten erken tarih olamaz</errorMessage>
</ValidationRule>