force-app/main/default/objects/Studenten__c/validationRules/isActive.validationRule-meta.xml
<ValidationRule>
    <fullName>isActive</fullName>
    <active>true</active>
    <errorConditionFormula>AND( isActive__c ,
     OR( ISBLANK( Email__c ),
         ISBLANK(  Phone__c ), 
         ISBLANK( TEXT(Status__c ) ) 
       )
    )</errorConditionFormula>
    <errorDisplayField>isActive__c</errorDisplayField>
    <errorMessage>isActive e dikkat</errorMessage>
</ValidationRule>