force-app/main/default/objects/Studenten__c/validationRules/isCorporate.validationRule-meta.xml
<ValidationRule>
    <fullName>isCorporate</fullName>
    <active>false</active>
    <errorConditionFormula>IF(isCorporate__c ,
      ISBLANK(Account__c) || NOT(ISBLANK(Parent__c ) ), 
       IF(Age__c &lt;18,ISBLANK(Parent__c  ) || 
            NOT( ISBLANK(Account__c) ),
            NOT( ISBLANK(Account__c) ) )
)</errorConditionFormula>
    <errorDisplayField>isCorporate__c</errorDisplayField>
    <errorMessage>dikkat</errorMessage>
</ValidationRule>