force-app/main/default/objects/Studenten__c/listViews/Corporate_Students.listView-meta.xml
<ListView>
    <fullName>Corporate_Students</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Corporate Students</label>
</ListView>